<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pw_create_activity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/create_pw_tip_text_size"
            android:text="@string/create_pw_tip"/>

        <LinearLayout
            android:layout_margin="20px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_pw_1"
                android:textSize="@dimen/create_pw_tip_text_size"
                android:layout_margin="5dp"/>

            <EditText
                android:id="@+id/et_set_pw_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/create_pw_tip_text_size"
                android:inputType="textPassword"
                android:maxLength="12"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="20px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_pw_repeate"
                android:textSize="@dimen/create_pw_tip_text_size"
                android:layout_margin="5dp"/>

            <EditText
                android:id="@+id/et_set_pw_repeat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/create_pw_tip_text_size"
                android:inputType="textPassword"
                android:maxLength="12"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <Switch
            android:id="@+id/swtich_show_pw"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_pw_show_pw"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_create_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/create_pw_btn"
        android:textSize="@dimen/common_button_text_size"
        android:background="@drawable/button_square"/>

</LinearLayout>